[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/elements/scripts/element_cloud_node.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=15]
size = 17
outline_size = 3
outline_color = Color( 0.0980392, 0.184314, 0.313726, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://assets/fonts/GemunuLibre-Light.ttf"

[sub_resource type="DynamicFont" id=9]
size = 128
outline_size = 4
outline_color = Color( 0.0980392, 0.184314, 0.313726, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 14 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[node name="CloudNode" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="BG" type="Polygon2D" parent="."]
modulate = Color( 0.262745, 0.682353, 0.823529, 1 )
position = Vector2( 0, 0.4 )
rotation = 0.785398
scale = Vector2( 0.1, 0.1 )
offset = Vector2( -150, -150 )
polygon = PoolVector2Array( 0, 0, 0, 300, 300, 300, 300, 0 )

[node name="LabelKind" type="Node2D" parent="."]

[node name="LabelKind" type="Label" parent="LabelKind"]
margin_left = -675.0
margin_top = -51.0
margin_right = 674.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 15 )
text = "cloud"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Node2D" parent="LabelKind"]
modulate = Color( 0.733333, 0.901961, 1, 1 )
position = Vector2( 0, -24 )
scale = Vector2( 0.3, 0.3 )

[node name="LabelName" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )

[node name="LabelName" type="Label" parent="LabelName"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1507.0
margin_top = -79.0
margin_right = 1497.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 9 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Reveal" type="Tween" parent="."]

[node name="Marker" type="Line2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 8 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
points = PoolVector2Array( -32, 0, 0, -32, 32, 0, 0, 32, -32, 0 )
width = 1.0
default_color = Color( 0.517647, 0.901961, 1, 1 )
antialiased = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="tween_all_completed" from="Reveal" to="." method="_on_Reveal_tween_all_completed"]
